--- a/MKStoryPhotography2/app/src/main/res/layout/activity_detail.xml
+++ b/MKStoryPhotography2/app/src/main/res/layout/activity_detail.xml
@@ -28,7 +28,7 @@
                 android:padding="8dp"
                 android:text="Image Slide"
                 android:gravity="center_vertical"
-                android:background="@android:color/white"
+                android:background="@color/colorPrimaryDark"
                 android:textColor="@android:color/black"
                 android:layout_marginLeft="16dp"
                 android:layout_marginBottom="16dp"
@@ -55,15 +55,7 @@
             android:layout_marginLeft="16dp"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="8dp"/>
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="Package Des"
-            android:layout_marginLeft="16dp"
-            android:layout_marginRight="16dp"
-            android:layout_marginBottom="8dp"
-            android:lineSpacingMultiplier="1"
-            android:textColor="@android:color/black" />
+    
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
